# vscode-cpp-template

./: .clang-format  CMakeLists.txt  configureCMake.bat  configureReleaseCMake.bat  main.cpp
